attempted fix of scrolling issues on iOS

--- a/www/core/styling/css/main.css
+++ b/www/core/styling/css/main.css
@@ -234,7 +234,7 @@ a:hover {
     width:60%;
     margin:5px auto;
     display:block;
-    font-size:90%;
+    font-size:75%;
 
 }
 
@@ -265,6 +265,7 @@ a:hover {
 link green: #007F0E
 dark green: #1A6B36
 background green: #238C49;
+bg green new: #37BC61
 background grey: #F2F2F2
 light grey: #F5F5F5
 peach: #FEF0DB
