--- a/www/core/styling/css/main_v2.css
+++ b/www/core/styling/css/main_v2.css
@@ -2,7 +2,7 @@
     margin:0;
     width:100%;
     height:auto;
-    background:#238C49;
+    background:#37BC61;
 }
 
 .header-container {
@@ -48,8 +48,6 @@
 #content-container{
     margin:0;
     padding:50px 0 42px 0;
-   overflow:hidden;
-    -webkit-overflow-scrolling: touch;
     
 }
 
@@ -134,7 +132,7 @@
         }
         .week-day .date .num{
             display:block;
-            background:#238C49;
+            background:#37BC61;
             margin:0 0 0 2px;
             padding:8px 10px;
             color:#FFF;
@@ -172,13 +170,15 @@
 .schedule-header{
     margin:0;
     position: fixed;
+    z-index:10;
     padding:15px 0;
     width:100%;
-    background:#238C49;
+    background:#37BC61;
     /*background:#F2F2F2;*/
     text-align:center;
 }
     .schedule-header .date{
+        position:relative;
         display:inline-block;
         background:#FFF;
         width:140px;
@@ -212,7 +212,11 @@
         }
 .schedule-item-container{
     position:relative;
-    z-index:1;
+    z-index:20;
+    -webkit-transform:translateZ(1px);
+      -moz-transform:translateZ(1px);
+      -o-transform:translateZ(1px);
+      transform:translateZ(1px);
     background:#FFF;
     border-top:2px solid #DDD;
 }
